--- a/style.css
+++ b/style.css
@@ -223,13 +223,13 @@ margin:3px 0 10px 10px;
 
 #gallery .grid img,.border,ul.list img{border:4px solid #ebebeb;}
 
-ul.list {
+ol.list {
     background: #fcfcfc;/*背景色*/
     padding: 0.5em 0.5em 0.5em 2em;/*ボックス内の余白*/
     border: solid 3px gray;/*線の種類 太さ 色*/
 }
 
-ul.list li {
+ol.list li {
     line-height: 1.5; /*文の行高*/
     padding: 0.5em 0; /*前後の文との余白*/
 }
